@@ -15,6 +15,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - patch #2961540 [export] Do not export data of MERGE table,
   thanks to Dieter Adriaenssens - ruleant
 - bug #2961198 [parser] Querying a table named "data"
+- bug #2931429 [structure] Editing long triggers
 
 3.3.0.0 (not yet released)
 + rfe #2308632 [edit] Use hex for (var)binary fields,
